@@ -1,3 +1,4 @@
+	html headers standardized
 	Random image added to index page
 	Email alerts added for changes
 	Surnames list added
